Fixed alignment of elements on mobile for thankyou.html

--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -138,7 +138,12 @@ main{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 18rem;
+  padding: 3rem 3rem;
+}
+@media(min-width: 400px){
+  #submission-message{
+    padding: 15rem 3rem;
+  }
 }
 h2{
   font-family: ofelia-text,sans-serif;
@@ -147,6 +152,7 @@ h2{
   font-size: 2.67rem;
   color: #473D33;
   margin: 0;
+  text-align: center;
 }
 p{
   font-family: venn, sans-serif;
@@ -154,6 +160,7 @@ p{
   font-style: normal;
   font-size: 1.5rem;
   color: #473D33;
+  text-align: center;
 }
 #another-response, #back-home{
   background-color: #6FA7B3;
@@ -166,6 +173,7 @@ p{
   padding: 15px 30px;
   text-decoration: none;
   margin-bottom: 8px;
+  text-align: center;
 }
 #another-response:hover, #back-home:hover{
   cursor: pointer;
